2008-10-16  Ben Van Mechelen  <me@benvm.be>

	* garmon/sensor.py:
	    correct egr_error so it returns an int


2008-10-15  Ben Van Mechelen  <me@benvm.be>

	* garmon/sensor.py:
	    rename lambda to o2
	    add egr functions
	* garmon/widgets.py:
	    remove UnitMixin from ProgressView
	* plugins/live_data/live_data.glade:
	* plugins/live_data/live_data.py:
	    Add a deactivate_all button
	    Add egr widgets
	

2008-10-15  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	    adjust window size
	* plugins/live_data/live_data.glade:
	    new layout
	* plugins/live_data/live_data.py:
	    update for the new layout
	

2008-10-14  Ben Van Mechelen  <me@benvm.be>

	* aclocal.m4:
	    ???
	* garmon/__init__.py:
	    get version always from defs.py
	* garmon/garmon_app.py:
	    correct website in about box
	* plugins/dashboard/dashboard.py:
	* plugins/dtc_clearer/dtc_clearer.py:
	* plugins/dtc_reader/dtc_reader.py:
	* plugins/freeze_frame_data/freeze_frame_data.py:
	* plugins/live_data/live_data.glade:
	* plugins/live_data/live_data.py:
	* plugins/o2_sensors/o2_sensors.py:
	    change version to 0.2
	    

2008-10-11  Ben Van Mechelen  <me@benvm.be>

	* garmon/widgets.py:
	    remove old classes
	    fix bugs in the new ones
	* plugins/live_data/live_data.py:
	    add a progress widget for testing
	* scripts/elm_sim.py:
	    changed pid responses for o2 sensors
	    

2008-10-03  Ben Van Mechelen  <me@benvm.be>

	* garmon/widgets.py:
	    SensorView and CommandView inherit from new BaseView Class
	    Created a new class SensorProgressView
	    

2008-10-01  Ben Van Mechelen  <me@benvm.be>

	* plugins/dashboard/dashboard.py:
	    Inherit from EventBox so we can catch events and
	    (de)activate gauges
	    

2008-09-26  Ben Van Mechelen  <me@benvm.be>

	* plugins/dashboard/dashboard.glade:
	* plugins/dashboard/dashboard.py:
	    add an alignment to center the widgets in the window


2008-09-26  Ben Van Mechelen  <me@benvm.be>
