@@ -59,7 +59,9 @@ commands = {'atz' : 'ELM327 v1.2',
             '011D' : '41 1D 45',
             '011E' : '41 1E 80',
             '011F' : '41 1F 45 78',
-            '0120' : '41 20 FF000000',
+            '0120' : '41 20 00180000',
+            '012C' : '41 2C 97',
+            '012D' : '41 2C AA',
             '03' : '43 07 04 06 34 05 23',
             '04' : '44',
             '0200' : '42 00 FFFFFFFF',
@@ -103,7 +105,7 @@ alternate_commands = {'atz' : 'ELM327 v1.2',
             'atrv' : '14.0V',
             'atdp' : 'other Protocol',
             '0100' : '41 00 FFFFFFFF',
-            '0120' : '41 00 00000000',
+            '0120' : '41 00 00180000',
             '0101' : '41 01 82 07 65 04',
             '0102' : '41 02 00 00',
             '0103' : '41 03 02 04',
@@ -135,6 +137,8 @@ alternate_commands = {'atz' : 'ELM327 v1.2',
             '011D' : '41 1D 23',
             '011E' : '41 1E 80',
             '011F' : '41 1F 34 56',
+            '012C' : '41 2C 55',
+            '012D' : '41 2C BB',
             '03' : '43 05 35 03 23 03 34',
             '04' : '44',
                         
