@@ -1,5 +1,11 @@
 2008-10-16  Ben Van Mechelen  <me@benvm.be>
 
+	* scripts/elm_sim.py:
+	    add pid responses for egr valve
+	    
+
+2008-10-16  Ben Van Mechelen  <me@benvm.be>
+
 	* garmon/sensor.py:
 	    correct egr_error so it returns an int
 
